--- a/themes/base/jquery.ui.combobox.css
+++ b/themes/base/jquery.ui.combobox.css
@@ -29,8 +29,8 @@
  *  http://jqueryui.com/autocomplete/#combobox
  */
 
-.ui-combobox { display: inline-block; margin: 0; }
-.ui-combobox-button { width: 1.8em !important; margin-left: -1px; vertical-align: top; }
-.ui-combobox-button .ui-button-text { padding: 0; margin: 0.25em; }
-.ui-combobox-input { margin: 0; padding: 0.25em; }
+.ui-combobox { display: inline-block; margin: 0; margin-right: 1.8em; position: relative; }
+.ui-combobox-input { padding: 0.2em; margin: 0; }
+.ui-combobox-button { position: absolute; width: 1.8em !important; margin: 0; margin-left: -1px; top: 0; bottom: 0; }
+.ui-combobox-button .ui-button-text { padding: 0em; }
 .ui-combobox .ui-autocomplete { max-height: 10em; overflow-y: auto; overflow-x: hidden; }
